# src/vohive/internal/api/server.go
@@ -321,6 +321,7 @@ func (s *Server) newRouter() *gin.Engine {
 		api.GET("/devices/:device_id/esim/chip-info", s.handleEsimGetChipInfo)                                    // 获取 eUICC 芯片信息
 		api.GET("/devices/:device_id/esim/actions/download", s.handleEsimDownloadProfile)                         // 下载 eSIM profile（SSE 流式进度）
 		api.PATCH("/devices/:device_id/esim/profiles/:iccid/note", s.handleEsimProfileNote)                       // 修改 profile 备注
+		api.PATCH("/devices/:device_id/esim/profiles/:iccid/expiry", s.handleEsimProfileExpiry)                   // 修改 profile 到期日期
 		api.PATCH("/devices/:device_id/esim/profiles/:iccid", s.handleEsimRenameProfile)                          // 修改 profile 名称
 		api.DELETE("/devices/:device_id/esim/profiles/:iccid", s.handleEsimDeleteProfile)                         // 删除 eSIM profile
 
